--- a/html/avg_elixir.html
+++ b/html/avg_elixir.html
@@ -106,7 +106,7 @@
                     <div id="plot-area1" class="plot-area">
                         <!-- Begin of text area for a graphic -->
                         <div id="text1" class="rq-text">
-                            <h4>Avergae elixir cost for a deck and its win rate</h4>
+                            <h4>Average Elixir Cost for a Deck and its Win Rate</h4>
                             <p>
                               In Clash Royale, elixir is a crucial resource that can make the difference between victory and defeat.
                               The average elixir cost of a deck is calculated by dividing the sum of the elixir costs of all cards
@@ -120,8 +120,8 @@
                             <p>
                               The boxplot shows the correlation between the average elixir cost of a deck and its win rate.
                               We have limited the decks for which there are at least 100 battles in the dataset, 
-                              as in the opinion of the testers a deck can only be rated well if it has at least 100 battles.
-                              The average win rate is around 58%. Decks with 2.8 average elixirs have the best win rate (median ~64%).
+                              as in the opinion of the investigators a deck can only be rated well if it has at least 100 battles.
+                              The average win rate is around 58%. Decks with 2.8 average elixir have the best win rate with a median of ~64%.
                               The average elixir costs per deck range from 2.2 to 5.4 elixir. Decks with 2.6, 2.8, 3.4, 4.5, 4.6 and
                               5.4 average elixir have a win rate of over 60% and decks with 4.8 and 5 average elixir have a win rate of under 50%.
                             </p>
@@ -143,7 +143,7 @@
                     <!-- End of block for text and corresponding graphic -->
                     <div id="plot-area2" class="plot-area">
                         <div id="text2" class="rq-text">
-                          <h4>Average elixir costs of decks for win conditions and their win rate</h4>
+                          <h4>Average Elixir Costs of Decks for Win Conditions and their Win Rate</h4>
                           <p>
                             Win conditions are cards that are particularly responsible for destroying enemy towers and thus for victory.
                             Here you can select a win condition in the legend to see the average elixir cost of decks with this win condition and 
