--- a/html/evos.html
+++ b/html/evos.html
@@ -99,20 +99,74 @@
             <div id="general">
                 <div id="content">
                     <div id="boxheader">
-                        <h1>Research Question Headline</h1>
+                        <h1>Do current evolutions influence the meta, so is it necessary to spend money regularly?</h1>
                     </div>
                     <div class="horizontal-line"></div>
                     <!-- Begin of block for text and corresponding graphic -->
                     <div id="plot-area1" class="plot-area">
                         <!-- Begin of text area for a graphic -->
                         <div id="text1" class="rq-text">
-                            <h4>Headline</h4>
-                            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore 
-                                magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. 
-                                Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, 
-                                consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, 
-                                sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, 
-                                no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                            <h4>Evolution Cards</h4>
+                            <p>
+                              Card evolutions allow certain cards to become stronger versions of themselves after a certain
+                               number of cycles. Each card with an evolution requires 6 evolution shards or joker shards to
+                                use in battle. When an evolution card is deployed, a special deployment tone sounds while
+                                 a purple light temporarily shines down on it.  All card evolutions have a special ability
+                                  that the original card does not have. In addition to the ability, some card evolutions 
+                                  have increased stats to compensate for their low use in combat. The number of cycles 
+                                  indicates how many times the original card must be in hand to receive card evolution.
+                                   For example, if a card takes two cycles to evolve, every third card is a card evolution.
+                                    This is easy to track because once the card is inserted, a diamond will fill in over
+                                     the card image the next time a player has it in their hand. Card evolution and the 
+                                     first evolution slot is unlocked at king level 7. The second evolution slot is
+                                      unlocked at king level 54. 
+                              </p>
+                              <br>
+                              <h4>Derivation</h4>
+                              <p>
+                              To keep Clash Royale varied and lively, Supercell releases a new development map every month.
+                               This is made available exclusively in the 'Pass Royale'. The Pass Royale can be purchased 
+                               for €14.99 and, in addition to the new evolution card (6 shards to unlock), also contains
+                               other rewards such as chests, card jokers, cosmetic items, gold and jewels. Since the new 
+                               development cards can only be obtained through passes and therefore real money, the question 
+                               arises as to whether current card developments influence the meta and whether buying these 
+                               passes is worthwhile and necessary in order to be able to play and keep up with the top
+                                German clans. Purchasing the passes represents the use of the current evolution card and 
+                                its upgrade. To answer this question, we examined all players' cards to unlock the evolution
+                                 cards. Based on the history of the publication of evolution cards, exact conclusions could
+                                  be drawn as to which evolution cards could only be unlocked with real money. Both the
+                                   number of evolutions unlocked in total and the respective evolution card identify a
+                                    player as a buyer or free player. 
+                              </p>
+                              <br>
+                              <h4>Card Level</h4>
+                              <p>
+                              There are five different card rarities in Clash Royale. Common, Rare, Epic, Legendary and
+                              Champion cards. The levels of the cards determine their strength in the game. The rarity
+                               of a card affects how many copies must be collected to reach the next level. When a card 
+                               is upgraded to a higher level, its stats such as damage, hit points, or attack speed are 
+                               improved. For hit points and damage, this is always +10%. Players can upgrade cards by 
+                               collecting cards of the same type and using gold that can be earned or purchased in-game.
+                                The higher the level of a card, the more effective it is in battle, but the more gold 
+                                and cards are required for the next level.
+                              </p>
+                              <br>
+                              <h4>Data Analysis</h4>
+                              <p>
+                              Due to limited evolution card slots, a maximum of two evolution cards can be used in a 
+                              combat deck. As a first evaluation, we examined the relevance of the evolution cards to
+                               find out which of these cards are profitable and how often they are actually used. To
+                                do this, we carried out a statistical analysis of all battles won and lost and determined 
+                                which evolution cards were played and won. The frequency of use (size of the circles) 
+                                and chance of victory (height of the Y-axis) is shown in the graph below. In last place are the 
+                                purchase-linked evolution cards Tesla, Valkyrie, Wallbreaker, Zap and Bomber with the 
+                                lowest chances of victory and mediocre usage. The Knight and Firecracker have the largest
+                                 shares, although neither have the highest win rates. Particularly striking is the Ice Spirit
+                                  which, as a purchase-linked evolution card, has the second highest win rate and at the
+                                   same time the lowest usage of all cards. This shows the targeted use of purchase-linked 
+                                   evolution cards in the top player segment.
+                              </p>
+
                         </div>
                         <!-- End of text area for a graphic -->
                         <!-- Begin of graphic area: for each graphic own placeholder name such as fig1 -->
@@ -131,18 +185,50 @@
                     <!-- End of block for text and corresponding graphic -->
                     <div id="plot-area2" class="plot-area">
                         <div id="text2" class="rq-text">
-                            <p>rq-text 2</p>
+                          <br>
+                          <h4>Average Number of Level 15 Evolution Cards per Player</h4>  
+                          <p>
+                              In connection with the research question of whether it 
+                              is necessary to buy cards to stay in the high elo, there was an overlap in the
+                               questions. This was analyzed in the graphic . This graph shows the proportion of
+                                evolution cards at level 15 relative to the remaining cards at level 15 on average. 
+                                Players have an average of 3.5 level 15 evolution cards per player and 16.5 cards 
+                                at the maximum level 15. It should be emphasized that these are only average values 
+                                and reference should be made to the analysis of the level 15 cards, which will be
+                                 answered in <a href="level.html">the next research question</a>. The obvious proportion of
+                                  evolution cards in use is made visually clear again by the graphic. Since only 
+                                  25% of the eight deck cards can be evolutions due to the limited evolution card
+                                   slots (maximum 2), players will need 6 additional cards in their maximum level 
+                                   combat deck to be competitive. </p>
                         </div>
                         <div id="plot2load" class="clearfix">
                           <div class="spinner-border" role="status">
                             <span class="visually-hidden">Loading...</span>
                           </div>
                         </div>
-                        <div id="plot2" class="rq-plot fullwidth-plot"></div>
+                        <div id="plot2" class="rq-plot center-plot"></div>
                     </div>
                     <div id="plot-area3" class="plot-area">
                       <div id="text3" class="rq-text">
-                          <p>rq-text 3</p>
+                        <br>
+                        <h4>The most played Level 15 Evolutions</h4>  
+                        <p>
+                            For the analysis, all player card sets were searched and statistically determined 
+                            how often which evolution cards were unlocked and at what level the evolution cards are.
+                            The cards were divided into blue and yellow columns by color. Blue columns are card 
+                             evolutions that can be unlocked without money by collecting fragments and events, yellow 
+                             columns show the development cards from the Royal Passes that can only be purchased with money. 
+                             The percentage of all unlocked evolutions is entered in the columns, which indicates how 
+                             often an unlocked evolution was also brought to the maximum level of 15. Using a card at 
+                             maximum level correlates strongly with regular use in top league battles. The battles there
+                              can be played with the highest possible card level that players have unlocked. The percentage
+                               therefore indirectly shows the active use and thus the relevance of the evolution cards 
+                               at level 15. The evaluation shows that purchase-linked evolutions have the lowest proportion
+                                of unlocked evolutions and also take up the lowest proportion of level 15 evolution cards.
+                                 Nevertheless, there are strong cards among them, for example the Wall Breaker card, which 
+                                 was only unlocked a little, but was brought to the maximum level by 68.5% of players. 
+                                 The example shows that players may have specifically unlocked cards through purchases 
+                                 and also use them in the active game.</p>
                       </div>
                       <div id="plot3load" class="clearfix">
                         <div class="spinner-border" role="status">
@@ -150,12 +236,18 @@
                         </div>
                       </div>
                       <div id="plot3" class="rq-plot fullwidth-plot"></div>
-                    </div>
-                    <div id="plot-area4" class="plot-area">
                       <div class="flex-container">
                         <div class="flex-child">
                           <div id="text4" class="rq-text">
-                              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                            <br>
+                              <p style="margin-top: 13%;">The evaluation of the unlocked evolutions led to the question of whether the evolution cards with the highest 
+                                win rate were also the cards that players brought to the maximum level of 15 in order to maximize the usefulness 
+                                of the evolution cards. We show this evaluation in this graphic. You can clearly see the small proportion of 
+                                evolution cards that are tied to purchase (yellow) in contrast to the evolution cards that are freely available 
+                                (blue). The Ice Spirit has the second highest win rate, but among the level 15 evolutions it appears in third-to-last 
+                                place with just 2.46%. This shows a distortion of the data due to the analysis of top players, so that individual cards 
+                                can be very strong (win rate), but at the same time are played very rarely (targeted use). A similar phenomenon occurs, 
+                                for example, when using Wall Breakers. </p>
                           </div>
                         </div> 
                         <div class="flex-child">
