--- a/html/level.html
+++ b/html/level.html
@@ -99,20 +99,59 @@
             <div id="general">
                 <div id="content">
                     <div id="boxheader">
-                        <h1>Research Question Headline</h1>
+                        <h1>Is it necessary to use purchase-based cards to stay in high elo?</h1>
                     </div>
                     <div class="horizontal-line"></div>
                     <!-- Begin of block for text and corresponding graphic -->
                     <div id="plot-area1" class="plot-area">
                         <!-- Begin of text area for a graphic -->
                         <div id="text1" class="rq-text">
-                            <h4>Headline</h4>
-                            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore 
-                                magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. 
-                                Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, 
-                                consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, 
-                                sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, 
-                                no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                            <h4>Card Level</h4>
+                            <p>There are five different card rarities in Clash Royale. Common, Rare,
+                               Epic, Legendary and Champion cards. The levels of the cards determine 
+                               their strength in the game. The rarity of a card affects how many cards
+                                must be collected to reach the next level. When a card is upgraded 
+                                to a higher level, its stats such as damage, hit points, or attack 
+                                speed are improved. For hit points and damage this is always +10%.
+                                 Players can upgrade cards by collecting cards of the same type and
+                                  using gold that can be earned or purchased in-game. The higher the 
+                                  level of a card, the more effective it is in battle, but the more
+                                   gold and cards are required for the next level. Since June 12,
+                                    2023, the maximum level for cards has been increased to 15. 
+                                    To bring cards to level 15, 50.000 Elite Joker are required 
+                                    per card. Elite Joker are obtained instead of cards for
+                                     level 14 cards, as Path of Legends reward, from the Shop and from magic 
+                                     items. We calculated that if you get the maximum number of 
+                                     Elite Jokers in the game every month, eight cards per account 
+                                     could be upgraded to level 15 for free by March without having
+                                      to spend any real money. 50.000 Elite Jokers cost €7.99 in
+                                      the shop. Since the battles of the top players at the
+                                       highest ranking level and world ranking level require
+                                        cards at level 15, we asked ourselves whether it is 
+                                        necessary to buy level 15 cards and how many cards
+                                        top players have at the maximum level and how much
+                                         money was spent to achieve this to reach.  
+                              </p>
+                            <br>
+                            <h4>Tower Troops</h4>
+                            <p> Tower troops have been added to the game since December 12, 2023.
+                               In addition to the previous Tower Princess, a card called Cannoneer was 
+                               unlocked from this point on. Since then, this card has only been 
+                               able to be improved through randomly found chests or with real money
+                                in the shop. A clear indication for buying players is a level 14 
+                                or even level 15 Cannoneer card. 
+                             </p>
+                             <br>
+                             <h4>Data Anylsis</h4>
+                             <p>For analysis, all player card sets were searched and statistically
+                               determined how many and which cards were brought to level 15. 
+                               Including the tower troop cards. Furthermore, the data set of all 
+                               battles was used to determine whether and what victory rate the 
+                               Cannoneer tower troop card had across all battles. Finally, the players were 
+                               classified based on the number of level 15 cards they had and the real
+                                money amount for the in-app purchases was determined. The sorted data 
+                                shows the following:
+                              </p>
                         </div>
                         <!-- End of text area for a graphic -->
                         <!-- Begin of graphic area: for each graphic own placeholder name such as fig1 -->
@@ -131,7 +170,16 @@
                     <!-- End of block for text and corresponding graphic -->
                     <div id="plot-area2" class="plot-area">
                       <div id="text2" class="rq-text">
-                          <p>rq-text 2</p>
+                        <h4>Cannoneer</h4>  
+                        <p>The Cannoneer was only purchased by 5% of players at level 15.
+                             On the one hand, this may be due to the high real money price 
+                             (€6.99 for 50 cards, as of March 15th). On the other hand, its 
+                             win rate is not significantly higher than with the Princess card.
+                              The Cannoneer is special and not easy to play. Even his share of 
+                              fights is only 10% of all fights. In a direct comparison to the 
+                              (only) other tower troop, the advantage of the (purchased) Cannoneer 
+                              is not apparent. 
+                            </p>
                       </div>
                       <div class="flex-container">
                         <div class="flex-child max-width">
@@ -154,7 +202,15 @@
                     </div>
                     <div id="plot-area3" class="plot-area">
                       <div id="text3" class="rq-text">
-                          <p>rq-text 3</p>
+                        <h4>The 20 most outleveled Cards</h4>  
+                        <p> As already mentioned in the section on <a href="evos.html">evolutions</a>, 
+                          the importance of level 15 evolutions as dominant level 15 cards is evident.
+                            Important and frequently played win conditions (e.g. Hog Rider, The Log) were 
+                             purchased at level 15. The buy-based evolutions 
+                             (orange columns) from the previous chapter hardly 
+                             differ from the other cards. The pattern of the data 
+                             confirms that its relevance is no greater than that of other cards
+                            </p>
                       </div>
                       <div id="plot4load" class="clearfix">
                         <div class="spinner-border" role="status">
@@ -165,7 +221,21 @@
                     </div>
                     <div id="plot-area4" class="plot-area">
                       <div id="text4" class="rq-text">
-                          <p>rq-text 2</p>
+                        <h4>Amount of Level 15 Cards and Money spend</h4>
+                          <p>The results of the data analysis can be divided into four categories.
+                             First category players, who have not bought any cards and only have 0 to 8 level 15
+                              cards. Second category players who have bought a level 15 card “every now and then”,
+                               i.e. have 9 to 12 level 15 cards. The third category includes clearly buying players with 13 to 
+                               16 level 15 cards. These players have twice as many cards as have
+                                been available for free since June 2023. And the final player category 
+                                includes all paying players with more than 16 level 15 cards. 
+                                The data shows that the proportion of players who have not necessarily
+                                spent money (0 to 8 cards) and players who have definitely spent 
+                                money (16 or more) are almost equal at 30% of players. The buy-based 
+                                victory through level 15 cards can be completely refuted by this analysis. 
+                                The 30% proportion of players with 8 or fewer level 15 cards shows that 
+                                playing in the top 200 clans does not require level 15 cards. 
+                              </p>
                       </div>
                       <div class="flex-container">
                         <div class="flex-child max-width">
@@ -188,7 +258,15 @@
                     </div>
                     <div id="plot-area5" class="plot-area">
                       <div id="text3" class="rq-text">
-                          <p>rq-text 3</p>
+                        <h4>Summary</h4>
+                          <p>The following graphic provides an overview of the various purchase-related 
+                            categories and the corresponding number of players who belong to the categories.
+                            Even if many players in the individual categories (level 15 cannoneer, purchased 
+                            level 15 cards) did not necessarily buy, it turns out that the binary breakdown 
+                            of buying and non-buying players gives a different impression. Almost 80% of all
+                             players have invested in one of the purchase-linked improvements. Only 
+                             around 20% of top players have never purchased anything in the game.
+                            </p>
                       </div>
                       <div id="plot7load" class="clearfix">
                         <div class="spinner-border" role="status">
