--- a/html/time.html
+++ b/html/time.html
@@ -99,20 +99,20 @@
             <div id="general">
                 <div id="content">
                     <div id="boxheader">
-                        <h1>Research Question Headline</h1>
+                        <h1>When are the most played Clash Royale games?</h1>
                     </div>
                     <div class="horizontal-line"></div>
                     <!-- Begin of block for text and corresponding graphic -->
                     <div id="plot-area1" class="plot-area">
                         <!-- Begin of text area for a graphic -->
                         <div id="text1" class="rq-text">
-                            <h4>Headline</h4>
-                            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore 
-                                magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. 
-                                Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, 
-                                consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, 
-                                sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, 
-                                no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                            <h4>Battles per Hour a Day</h4>
+                            <p>In order to determine the match times, we statistically analyzed 
+                              all time stamps of the matches from March 1st to 18th. After grouping
+                               by day, converting to the German time zone and adjusting the data,
+                                the result was as follows. Many of the highest match times took
+                                 place during the week and between 9 am and 11 pm.
+                              </p>
                         </div>
                         <!-- End of text area for a graphic -->
                         <!-- Begin of graphic area: for each graphic own placeholder name such as fig1 -->
@@ -131,7 +131,11 @@
                     <!-- End of block for text and corresponding graphic -->
                     <div id="plot-area2" class="plot-area">
                         <div id="text2" class="rq-text">
-                            <p>rq-text 2</p>
+                          <h4>Win Rate per Hour per Date</h4>
+                            <p>
+                              For better visualization we designed a 3d scatter plot with the win rate, 
+                              the hours of the day and the dates of the project period as the three axes.
+                            </p>
                         </div>
                         <div id="plot2load" class="clearfix">
                           <div class="spinner-border" role="status">
@@ -142,7 +146,12 @@
                     </div>
                     <div id="plot-area3" class="plot-area" style="min-height: 500;">
                       <div id="text3" class="rq-text">
-                          <p>rq-text 3</p>
+                          <h4>Win Rate per Hour per Day</h4>
+                          <p>The question was continued by analyzing whether there is a 
+                            correlation between the time of day and the number of matches won.
+                             Therefore, we summarized all weekdays of our data set and summarized 
+                             the win rate per hour and day. So if you play Clash Royale and don't
+                              want to lose against top players, avoid Mondays and Sundays. Play on Thursdays.</p>
                       </div>
                       <div id="plot3" class="rq-plot left-align">
                           <ul class="nav nav-tabs" id="myTab" role="tablist">
