--- a/index.html
+++ b/index.html
@@ -221,6 +221,17 @@
                             </div>
                         </div>
                     </div>
+                  <div class="home-tile">
+                    <h4 id="data-title">Data Pipeline</h4>
+                    <div id="datalinklist" class="list-group">
+                      <a href="html/data.html" class="list-group-item list-group-item-action">
+                          <div class="d-flex w-100 justify-content-between">
+                              <h5 class="mb-1 tile-heading">Data</h5>
+                          </div>
+                          <p class="mb-1 tile-text-linklist">Process of data collection, data cleaning, data selection and data transformation.</p>
+                      </a>
+                  </div>
+                  </div>
                 </div>
               </div>
             </div>
